--- a/jnihds/build.xml
+++ b/jnihds/build.xml
@@ -1068,6 +1068,10 @@
            deprecation="${deprecation}" >
       <classpath refid="tests-classpath"/>
     </javac>
+
+    <copy todir="${build.tests}">
+      <fileset dir="${tests.dir}" excludes="**/*.java"/>
+    </copy>
   </target>
 
   <!--
