Don't use jpcs so commented out for now (doesn't build reliably)

--- a/build.xml
+++ b/build.xml
@@ -194,8 +194,8 @@
     <echo message="Executing SOAPSERVER target: ${what}"/>
     <ant dir="./soapserver" target="${what}"/>
 
-    <echo message="Executing JPCS target: ${what}"/>
-    <ant dir="./jpcs" target="${what}"/>
+ <!--   <echo message="Executing JPCS target: ${what}"/> -->
+ <!--   <ant dir="./jpcs" target="${what}"/> -->
 
     <echo message="Executing StarTask target: ${what}"/>
     <ant dir="./startask" target="${what}"/>
