--- a/ant/build.xml
+++ b/ant/build.xml
@@ -202,15 +202,16 @@
           depends="jars"
           description="signs jar files, post-install">
 
-    <!-- Sign all jar files in source directory and the installed ant
-     !   jar file --> 
+    <!-- Sign all jar files in source directory and the installed
+     !   equivalents --> 
     <signjar alias="${webstart.alias}"
              keystore="${webstart.keystore}"
              keypass="${webstart.keypass}"
              storepass="${webstart.storepass}">
       <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
-      <fileset dir="${star.jar.dir}" includes="ant.jar"/>
-      <fileset dir="${star.jar.dir}" includes="optional.jar"/>
+      <fileset dir="${star.jar.dir}" includes="ant*.jar"/>
+      <fileset dir="${star.jar.dir}" includes="xercesImpl.jar"/>
+      <fileset dir="${star.jar.dir}" includes="xml-apis.jar"/>
     </signjar>
 
   </target>
