Commented out the test target, since it doesn't do anything very useful and hinders the global test target by (a) never returning and (b) failing in headless environments.

--- a/frog/build.xml
+++ b/frog/build.xml
@@ -1044,12 +1044,16 @@
    !-->
   <target name="test"
           depends="compile-tests">
-
     <!-- Run up FROG from the local build -->
-    <java classname="uk.ac.starlink.frog.FrogMain" fork="true">
-      <classpath refid="tests-classpath"/>
-      <sysproperty key="java.awt.headless" value="${java.awt.headless}"/>
-    </java>
+  <!--
+   ! Test commented out as it's not a unit test, fails when headless,
+   ! and never returns (MBT).
+   !
+   !<java classname="uk.ac.starlink.frog.FrogMain" fork="true">
+   !  <classpath refid="tests-classpath"/>
+   !  <sysproperty key="java.awt.headless" value="${java.awt.headless}"/>
+   !</java>
+   !-->
   </target>
 
   <!--
