--- a/util/build.xml
+++ b/util/build.xml
@@ -439,7 +439,7 @@
        </security>
        <resources>
          <j2se version="1.4+"/>
-         <jar href="${name}/${name}.jar"/>
+         <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
        </resources>
        <component_desc/>
      </jnlp>
