--- a/util/build.xml
+++ b/util/build.xml
@@ -405,11 +405,12 @@
     </jar>
 
     <!-- Sign all jar files -->
-    <signjar jar="${dist.lib.pkg}/${name}.jar"
-             alias="${webstart.alias}"
+    <signjar alias="${webstart.alias}"
              keystore="${webstart.keystore}"
              keypass="${webstart.keypass}"
-             storepass="${webstart.storepass}"/>
+             storepass="${webstart.storepass}">
+       <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
+    </signjar>
 
   </target>
 
