Added DATANODE package.

--- a/build.xml
+++ b/build.xml
@@ -188,6 +188,9 @@
     <echo message="Executing VO target: ${what}"/>
     <ant dir="./vo" target="${what}"/>
 
+    <echo message="Executing DATANODE target: ${what}"/>
+    <ant dir="./datanode" target="${what}"/>
+
     <echo message="Executing JAIUtil target: ${what}"/>
     <ant dir="./jaiutil" target="${what}"/>
 
@@ -423,6 +426,10 @@
 
       <packageset dir="vo/build/java" defaultexcludes="yes">
          <exclude name="net/ivoa/www/**"/>
+      </packageset>
+
+      <packageset dir="datanode/build/java" defaultexcludes="yes">
+         <include name="**"/>
       </packageset>
 
       <packageset dir="hdx/build/java" defaultexcludes="yes">
