--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -627,6 +627,31 @@
        <application_desc main_class="uk.ac.starlink.treeview.Driver"/>
      </jnlp>
 
+     <!-- Provide as a component (so that other applications may invoke) -->
+     <jnlp toFile="${dist.lib}/${name}-parts.jnlp" href="${name}-parts.jnlp"
+          codebase="${webstart.codebase}">
+      <information>
+         <title>Treeview - a tool for displaying hierarchical structures</title>
+         <vendor>Starlink UK</vendor>
+         <homepage href="${home.page}"/>
+         <icon href="${webstart.starlink_logo}"/>
+         <description>"Starlink Treeview - Webstart edition"</description>
+         <offline_allowed/>
+       </information>
+       <security>
+          <all_permissions/>
+       </security>
+       <resources>
+         <j2se version="1.4+"/>
+         <jar href="${name}/${name}.jar"/>
+         <extension name="DATANODE" href="datanode.jnlp"/>
+         <extension name="AXIS" href="axis.jnlp"/>
+         <extension name="JSKY" href="jsky.jnlp"/>
+         <extension name="JAIUTIL" href="jaiutil.jnlp"/>
+       </resources>
+       <component_desc/>
+     </jnlp>
+
   </target>
 
   <!--
