Added schema validation to VOTable package unit tests.  Previously I was only validating against the VOTable DTD, which at version 1.1 of the standard is non-normative. (having posted to the IVOA mailing lists saying everyone should do this, I felt obliged to do it myself).

--- a/votable/build.xml
+++ b/votable/build.xml
@@ -270,6 +270,9 @@
     <pathelement location="${build.tests}"/>
     <pathelement location="${tests.dir}"/>
     <pathelement location="${tests.etc.dir}"/>
+    <fileset dir="${src.jars.dir}/tests">
+      <include name="*.jar"/>
+    </fileset>
     <path refid="classpath"/>
   </path>
 
