--- a/vo/.properties
+++ b/vo/.properties
@@ -1,2 +1,7 @@
-jar.class.path=nvo-registry.jar \
-               ../table/table.jar ../votable/votable.jar ../util/util.jar
+jar.class.path=\
+    nvo-registry.jar \
+    sesame.jar \
+    ../axis/axis.jar \
+    ../util/util.jar \
+    ../table/table.jar \
+    ../votable/votable.jar \
